	  http://www.mail-archive.com/libcroco-list@gnome.org/msg00049.html .
	  This change is a noop in the sense that it has no effect on
	  libcroco's object files, but does affect source-level compatibility,
	  both forwards and backwards — though in practice I'd guess that no
	  existing code will break from this.

	* src/cr-declaration.c: (cr_declaration_new): Doc.

2007-01-10  Bruno Haible  <bruno@clisp.org>

	* cr-style.h (enum CRPositionType): Remove trailing comma. Needed for
	compilation on AIX with xlc.
	* cr-fonts.c (cr_font_weight_get_bolder): Handle FONT_WEIGHT_INHERIT.
	* cr-sel-eng.c: Bug 395099 - overly agressive rule matching
	
2007-01-09  Benjamin Dauvergne <feanor@tol-eressea.org>

	* src/cr-tknzr.c: Bug 314831 - Escapes not recognized
	
2007-01-09  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-sel-eng.c: a bug in the class selector code, where it would not require whitespace before the class in a class attribute with multiple classes.
	
2007-01-09  Dom Lachowicz <domlachowicz@gmail.com>

        From Bruno Haible <bruno@clisp.org>
	
	* src/cr-fonts.h: gives syntax errors when included twice
	* src/cr-fonts.c: the return value of cr_font_family_prepend()
	should be "the font family list", not CR_OK which is the same as NULL.
	* src/cr-fonts.c: the logic of cr_font_weight_get_bolder
	does not take into account the FONT_WEIGHT_INHERIT value, and the
	shift by 1 can yield out-of-range values. Partial fix
	
2007-01-09  Benjamin Dauvergne <feanor@tol-eressea.org>

	* src/cr-tknzr.c: Bug 372011 - comments not parsed correctly
	* src/cr-tknzr.c: Bug 394680 - problem parsing function name starting with 'u' or 'r'
	* src/cr-parser.c: Bug 139878 - keep end of ruleset parsing location, and give it to the end_selector sac-handler.
	* src/cr-tknzr.c: Bug 394294 - Escape are wrongly computed
	
2007-01-09  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-tknzr.c: Bug 336621 - cr_tknzr_get_next_token wasn't 
	handling "<!--" correctly
