@@ -13,6 +13,8 @@
 	  existing code will break from this.
 
 	* src/cr-declaration.c: (cr_declaration_new): Doc.
+	* (cr_declaration_destroy): Simplify implementation (and assert that
+	  next/prev elements point to each other before following the links).
 
 2007-01-10  Bruno Haible  <bruno@clisp.org>
 
